--- a/AdaptiveWeather/Base.lproj/Main.storyboard
+++ b/AdaptiveWeather/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina3_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,94 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AdaptiveWeather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Ycx-jg-oQI">
+                                <rect key="frame" x="10" y="20" width="300" height="192"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FKp-U0-fwj" userLabel="TextContainer">
+                                <rect key="frame" x="0.0" y="232" width="320" height="248"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cupertino" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Z4l-c2-AOu">
+                                        <rect key="frame" x="0.0" y="10" width="320" height="107.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="90"/>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="otU-4U-SUW">
+                                        <rect key="frame" x="0.0" y="58.5" width="320" height="179.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="250"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
+                                        </variation>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.21568627450980393" green="0.50196078431372548" blue="0.72941176470588232" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="otU-4U-SUW" firstAttribute="width" secondItem="FKp-U0-fwj" secondAttribute="width" id="2Ny-t9-KDw"/>
+                                    <constraint firstItem="Z4l-c2-AOu" firstAttribute="width" secondItem="FKp-U0-fwj" secondAttribute="width" id="7C7-5J-Lpi"/>
+                                    <constraint firstAttribute="bottom" secondItem="otU-4U-SUW" secondAttribute="bottom" constant="10" id="hhf-9j-dVd"/>
+                                    <constraint firstItem="otU-4U-SUW" firstAttribute="centerX" secondItem="FKp-U0-fwj" secondAttribute="centerX" id="lsn-lV-Mee"/>
+                                    <constraint firstItem="Z4l-c2-AOu" firstAttribute="top" secondItem="FKp-U0-fwj" secondAttribute="top" constant="10" id="n5H-gW-cde"/>
+                                    <constraint firstItem="Z4l-c2-AOu" firstAttribute="centerX" secondItem="FKp-U0-fwj" secondAttribute="centerX" id="zOU-CD-hSd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="FKp-U0-fwj" secondAttribute="bottom" id="EZi-iM-kJf"/>
+                            <constraint firstItem="FKp-U0-fwj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HPA-L2-BfV"/>
+                            <constraint firstItem="FKp-U0-fwj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Kee-JI-tnH"/>
+                            <constraint firstItem="Ycx-jg-oQI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="SqP-mj-5a7"/>
+                            <constraint firstItem="Ycx-jg-oQI" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.45" id="XOB-gH-qeG"/>
+                            <constraint firstItem="FKp-U0-fwj" firstAttribute="top" secondItem="Ycx-jg-oQI" secondAttribute="bottom" constant="20" id="ebI-rX-seT"/>
+                            <constraint firstAttribute="trailing" secondItem="FKp-U0-fwj" secondAttribute="trailing" id="ebu-yH-SuJ"/>
+                            <constraint firstItem="Ycx-jg-oQI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="jPS-d5-bfn"/>
+                            <constraint firstItem="FKp-U0-fwj" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="ntQ-DS-LJO"/>
+                            <constraint firstItem="Ycx-jg-oQI" firstAttribute="height" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="oDa-eo-1O6"/>
+                            <constraint firstItem="Ycx-jg-oQI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rJf-wc-Kmt"/>
+                            <constraint firstItem="Ycx-jg-oQI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="z3o-m4-GKP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="XOB-gH-qeG"/>
+                                <exclude reference="jPS-d5-bfn"/>
+                                <exclude reference="z3o-m4-GKP"/>
+                                <exclude reference="HPA-L2-BfV"/>
+                                <exclude reference="ntQ-DS-LJO"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="SqP-mj-5a7"/>
+                                <include reference="XOB-gH-qeG"/>
+                                <include reference="jPS-d5-bfn"/>
+                                <exclude reference="oDa-eo-1O6"/>
+                                <exclude reference="rJf-wc-Kmt"/>
+                                <include reference="z3o-m4-GKP"/>
+                                <include reference="HPA-L2-BfV"/>
+                                <exclude reference="Kee-JI-tnH"/>
+                                <exclude reference="ebI-rX-seT"/>
+                                <include reference="ntQ-DS-LJO"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33.75" y="10.56338028169014"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cloud_small" width="300" height="196"/>
+    </resources>
 </document>
